# Agent

./: .gitignore  README.md  pyproject.toml
docs/: planner-harness.md
files/: Messy_Employee_dataset.csv  listings.csv
scripts/: harness_files.sh
src/pipeline/: __init__.py  artifact_names.py  cleaning_metrics.py  cleaning_plan.py  compare_harness_jsonl.py  graph.py  harness_planner.py  llm_text.py  nodes.py  profile.py  quality.py  run.py  state.py  validation.py
src/pipeline/prompts/: __init__.py  cleaning_planner.py
tests/: test_artifact_names.py  test_cleaning_metrics.py  test_cleaning_plan.py  test_cleaning_planner_prompts.py  test_compare_harness_jsonl.py  test_graph.py  test_llm_text.py  test_profile.py  test_quality.py  test_validation.py
